<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">爱热闹</string>
	
	<string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    
	<string name="menuEdit">编辑</string>
	<string name="create_activity">创建活动</string>
	<string name="detailActivity">短信内容</string>
	<string name="meeting_list">活动列表</string>
	<string name="send_ways">邀请方式</string>
	<string name="send_ways_title">请选择一种发送方式</string>
	<string name="start_time">何时：</string>
	<string name="end_time">结束时间：</string>
	<string name="destination">去哪：</string>
	<string name="people_limit">几人：</string>
	<string name="desc_activity">短信内容：</string>
	<string name="hint">本活动内容将会作为短信发送</string>
	<string name="send_lable_content_tip">活动内容不能为空</string>
	<string name="send_message">发送手机短信</string>
	<string name="send_mail">发送电子邮件</string>
	<string name="set_time_title">设置时间</string>
	<string name="position_hint">可选填，主要作用是进行地图定位</string>
	<string name="people_num_hint">无限制</string>
	<string name="inputTip">联系人之间请用<b>,</b>隔开</string>
	<string name="btn_ok">确定</string>
	<string name="btn_cancle">取消</string>
	<string name="btn_setting">设置</string>
	<string name="memu_send_way">发送方式</string>
	<string name="sendLableTime">时间待定</string>
	<string name="sendLablePosition">地点待定</string>
	<string name="position_too_lang">您输入的字符过长，字符上限为256个字符！</string>
	<string name="limit_num">人数上限为999，请重新输入！</string>
	<string name="wrong_num">您不能输入其他字符，请输入数字:0~999</string>
	<string name="operate">操作</string>
	<string name="delete">删除</string>
	<string name="deleteMenu">删除不可恢复，是否确认删除？</string>
	<string name="copy">复制</string>
	<string name="share">分享</string>
	<string name="save">保存</string>
	<string name="refresh">刷新</string>
	<string name="menuPersonInfo">个人信息</string>
	<string name="menuExit">登出</string>
	<string name="login_label_username">帐号:</string>
	<string name="login_label_password">密码:</string>
	<string name="register_label_pass_insure">确认:</string>
	<string name="login_label_signin">登 录</string>
	<string name="login_label_find_back">找回</string>
	<string name="login_status_logging_in">登录中...</string>
	<string name="login_username_hint">必填项，请输入账号</string>
	<string name="login_register_link">忘记密码？</string>
	<string name="login_register">注册</string>
	<string name="register_label_top">用户注册</string>
	<string name="register_lable_pass_tip">必填项，6~16位</string>
	<string name="pass_tip">密码不能为空</string>
	<string name="pass_tip1">密码长度最低为6位</string>
	<string name="pass_tip2">确认密码不能为空</string>
	<string name="pass_tip3">两次输入的密码不一样，请重新输入</string>
	<string name="user_name_check">用户名不能为空</string>
	<string name="alert_message">当您接受安全协议后，方可注册</string>
	<string name="find_lable_message">输入手机号或邮箱来获取临时密码</string>
	<string name="find_lable_tip">手机号或邮箱</string>
	<string name="error_email">输入的邮件格式不正确</string>
	<string name="send_airenao_reciever">参加者</string>
	<string name="send_airenao_title">发送邀请</string>
	<string name="reinvate">重新邀请</string>
	<string name="sendTip">发送提醒</string>
	<string name="btn_back">返回</string>
	<string name="send_airenao_add">增加</string>
	<string name="send_airenao_content">内容</string>
	<string name="send_airenao_with_tip">带报名提示</string>
	<string name="send_airenao_SMS_in_mine">使用自己的手机发送</string>
	<string name="send_airenao_retrieve">恢复默认设置</string>
	<string name="to_detail_activity">toDetailActivity</string>
	<string name="invited_number">邀请人</string>
	<string name="signed_number">已报名</string>
	<string name="unsiged_number">未报名</string>
	<string name="unjion">未参加</string>
	<string name="button_edit">编辑</string>
	<string name="user_off">注销</string>
	<string name="user_off_message">确定要注销吗？</string>
	<string name="btn_create_lable_SMS">发送短信</string>
	<string name="btn_create_lable_email">发送邮件</string>
	<string name="loadAirenao">数据加载中...</string>
	<string name="sendLableTitle">提示</string>
	<string name="exitMessage">是否要离开“爱热闹”？</string>
	<string name="clickSetTime">点击设置时间</string>
	<string name="netdown">网络故障</string>
	<string name="netdownTip">网络故障，请先配置网络</string>
	<string name="chkSdcard">sdcard不存在，请先插入sdcard</string>
	<string name="sendlableNotice">关闭报名提示后，在发送给邀请人的短信/邮件中，将不包含报名链接，确定吗？</string>
	<string name="txtSendLable">
	某某邀请您参加：某年某月某日某时某地点举办的某某活动，敬请光临
	</string>
	<string name="createToList">返回活动列表，则创建活动页面中的数据将丢失，是否确定？</string>
	<string name="sendSmsTip">收件人列表为空，是否继续操作？</string>
	<string name="systemMistakeTitle">对不起</string>
	<string name="make_primary">Remember this choice</string>
	<!-- Title for the call disambiguation dialog -->
	<string name="call_disambig_title">Call using</string>

	<!-- Title for the sms disambiguation dialog -->
	<string name="sms_disambig_title">Text using</string>
	<string name="systemMistake">系统发生错误！</string>
	<string name="search_add_hint"><font size="18" color="red">Enter a name for search</font></string>
	<string name="sendLableLink">
		<b>点击</b>www.airenao.com<b>进入报名链接</b>
	</string>
	<string name="showAllContactsJoinItem">Show all contacts</string>
	<string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
	<string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	<string name="listFoundAllContactsZero">Contact not found</string>
	<string name="listTotalAllContactsZero">No visible contacts</string>
	<string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
	<string name="separatorJoinAggregateAll">All contacts</string>
	<string name="listTotalPhoneContactsZero">No visible contacts with phone numbers</string>
	<string name="favoritesFrquentSeparator">Frequently called</string>
	<plurals name="listFoundAllContacts">
		<item quantity="one">Found 1 contact</item>
		<item quantity="other">
			Found
			contacts
		</item>
	</plurals>


	<plurals name="listTotalAllContacts">
		<item quantity="one">Displaying 1 contact</item>
		<item quantity="other">
			Displaying

			contacts
		</item>
	</plurals>

	<plurals name="listTotalPhoneContacts">
		<item quantity="one">Displaying 1 contact with phone number</item>
		<item quantity="other">
			Displaying

			contacts with phone numbers
		</item>
	</plurals>

	<string name="type_short_home">H</string>
	<!-- Single-character overlay for mobile phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_mobile">M</string>
	<!-- Single-character overlay for work phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_work">W</string>
	<!-- Single-character overlay for pager phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_pager">P</string>
	<!-- Single-character overlay for other phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_other">O</string>

	<string name="deleteConfirmation_title">Delete</string>
	<string name="deleteConfirmation">This contact will be deleted.</string>

	<string name="menu_addStar">Add to favorites</string>

	<!-- Menu item used to remove a star from a contact, making the contact 
		no longer show up at the top of favorites -->
	<string name="menu_removeStar">Remove from favorites</string>

	<!-- Menu item used to edit a specific contact -->
	<string name="menu_editContact">Edit contact</string>
	<string name="menu_deleteContact">Delete contact</string>
	<string name="menu_call">Call contact</string>

	<!--
		Menu item used to send an SMS or MMS message to a specific phone
		number or a contacts default phone number
	-->
	<string name="menu_sendSMS">Text contact</string>
	
	<string name="noFavoritesHelpText">
		"You don't have any favorites.\n\nTo add a contact to your list of
		favorites:\n
		<li>
			Touch the
			<b>Contacts</b>
			tab\n
		</li>
		\n
		<li>Touch the contact you want to add to your favorites\n</li>
		\n
		<li>Touch the star next to the contact\'s name\n</li>
		"
	</string>
	
	<string name="noMatchingContacts">No matching contacts found.</string>
	<string name="rgPgrsTitle">正在下载数据...</string>
	<string name="holdMessage">请稍候...</string>
	<string name="rgMessage">注册并登录中....</string>
	<string name="rgVictoryMessage">注册成功，登陆中...</string>
	<string name="logining">登陆中...</string>
	<string name="loginFalse">登陆失败</string>
	<string name="respondMsg">服务器返回错误代码:</string>
	<string name="registerUrl">http://192.168.1.15:43401/a/accounts/regist/</string>
	<string name="loginUrl">http://192.168.1.15:43401/a/accounts/login/</string>
	<string name="partyListUrl">http://192.168.1.15:43401/a/parties/partylist/</string>
	<string name="partyCreateUrl">http://192.168.1.15:43401/a/parties/createparty/</string>
	<string name="getClientsCountUrl">http://192.168.1.15:43401/a/parties/get_party_client_main_count/</string>
	<string name="getPeopleInfoUrl">http://192.168.1.15:43401/a/parties/get_party_client_seperated_list/</string>
	<string name="applayUrl">http://192.168.1.15:43401/a/parties/change_client_status/</string>
	<string name="deleteUrl">http://192.168.1.15:43401/a/parties/deleteparty/</string>
	<string name="editUrl">http://192.168.1.15:43401/a/parties/editparty/</string>
	<string name="getPartyMsg">http://192.168.1.15:43401/a/parties/get_party_msg/</string>
	<string name="partyResend">http://192.168.1.15:43401/a/parties/resendmsg/</string>
	
	<string name="app_sina_consumer_key">999433557</string>
    <string name="app_sina_consumer_secret">8ebb477102459b3387da43686b21c963</string>
	
	
	
	
	
	

</resources> 
