<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1">
	<TextView android:layout_width="fill_parent"
		android:textColor="#FFFFFF" android:layout_height="37sp" android:text="@string/create_activity"
		android:background="@drawable/blue_button" android:gravity="center" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="8dip">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">
			<LinearLayout android:id="@+id/linearLayout1"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_weight="0.45">
				<RelativeLayout android:id="@+id/startTimeLayout"
					android:layout_width="fill_parent" android:orientation="horizontal"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:id="@+id/startTime"
						android:layout_centerVertical="true"
						android:layout_alignParentLeft="true"
						android:text="@string/start_time" />
					<EditText android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:layout_marginLeft="70dip"
						android:id="@+id/startTimeText" 
						android:editable="false"
						android:focusable="false"
						android:clickable="true"
						
						/>
				</RelativeLayout>
				
				<LinearLayout android:id="@+id/positionLayout"
					android:layout_width="fill_parent"
					android:layout_marginTop="8dp" 
					android:orientation="horizontal"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/position"
						android:text="@string/destination" />
					<EditText android:id="@+id/positionEditText"
						android:layout_width="fill_parent" 
						android:layout_marginLeft="28dp"
						android:layout_marginRight="19dip"
						android:layout_height="wrap_content"
						android:layout_weight="1" android:freezesText="true">
						<requestFocus />
					</EditText>
				</LinearLayout>
				<LinearLayout android:id="@+id/peopleNumLayout"
					android:layout_marginTop="8dp" 
					android:layout_width="fill_parent" android:orientation="horizontal"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/peopleNum"
						android:text="@string/people_limit" />
					<EditText android:id="@+id/peopleNumEditText"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_marginRight="19dip"
						android:maxLength="3"
						android:layout_weight="1" android:freezesText="true">
						<requestFocus />
					</EditText>
				</LinearLayout>
				<LinearLayout android:id="@+id/descrLayout"
					android:layout_width="fill_parent" 
					android:layout_marginTop="16dp" 
					android:orientation="horizontal"
					android:layout_height="wrap_content">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/descr"
						android:text="@string/desc_activity" />
					<EditText android:id="@+id/descrEditText"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_weight="1" 
						android:layout_marginRight="19dip"
						android:hint="@string/hint"
						android:minHeight="160dp" 
						android:freezesText="true">
						<requestFocus />
					</EditText>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center_horizontal">
			<Button
				android:id="@+id/btnSendSMS"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="90dp"
			    android:layout_marginTop="14dp"
			    android:text="@string/btn_create_lable_SMS"
			   />	
			<Button
				android:id="@+id/btnSendEmail"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="90dp"
			    android:layout_marginTop="14dp"
			    android:text="@string/btn_create_lable_email"
			   />
			</LinearLayout>
			
			   
		</LinearLayout>
	</ScrollView>
</LinearLayout>
