<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/bj"
	android:weightSum="1">
	
	
	<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="40sp"
	android:orientation="horizontal"
	android:paddingTop="0dip"
	android:background="@drawable/red_button">
	<include layout="@layout/user_layout"/>"
	<TextView android:layout_width="fill_parent"
		android:textColor="#FFFFFF"
		android:layout_height="37sp" 
		android:textSize="25sp"
		android:text="@string/send_airenao_title"
		android:gravity="center|center_horizontal" />
	</RelativeLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bj"
		android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
				android:id="@+id/txtSend"
				android:layout_height="wrap_content" 
				android:layout_marginLeft="20dp"
				android:layout_marginTop="15dp"
				android:textColor="@color/black"
				android:layout_centerVertical="true"
			    android:text="@string/send_airenao_reciever" />
		<RelativeLayout android:id="@+id/startTimeLayout"
			android:layout_width="fill_parent" android:orientation="horizontal"
			android:layout_height="wrap_content">
			
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_toRightOf="@id/txtSend"
				android:layout_height="wrap_content" 
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
				android:id="@+id/sendLinout"
				android:layout_centerVertical="true"
				android:layout_centerHorizontal="true"
				android:orientation="vertical">
				<com.aragoncg.apps.airenao.SDKimp.MyMultiAutoCompleteTextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_marginTop="15dip"
				android:paddingRight="32dip"
				android:layout_centerVertical="true"
				android:layout_centerHorizontal="true"
				android:background="@drawable/edt_bg"
				android:completionThreshold="1"
				android:id="@+id/txtSendReciever" />
				<TextView
				android:gravity="top"
				android:layout_gravity="center_horizontal"
				android:textColor="@color/black"
				android:textSize="11dip"
				android:layout_height="wrap_content"
				android:text="@string/inputTip" android:layout_width="144dp"/>
			</LinearLayout>
			<ImageButton android:id="@+id/btnSendReciever"
				android:layout_centerVertical="true"
				android:layout_alignRight="@id/sendLinout"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:background="@drawable/bg_btn_add"
				/>
		</RelativeLayout>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="20dp"
			android:text="@string/detailActivity"/>
		<!-- <requestFocus /> -->
		<EditText android:id="@+id/txtSendLable"
			android:layout_marginTop="20dp"
			android:layout_width="fill_parent" android:layout_marginLeft="28dp"
			android:layout_marginRight="28dip" android:background="@drawable/edt_bg"
			android:layout_height="wrap_content" 
			android:gravity="top"
			android:hint="@string/hint"
			android:minHeight="220dp"
			android:layout_weight="1"
			android:freezesText="true">
		</EditText>

		<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/send_ways"
        		android:textColor="@color/black"
        		android:layout_marginTop="10dip"
				android:layout_marginLeft="20dp"
				android:visibility="gone"
    												/>
    	<Spinner android:id="@+id/spinnerSend"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="center_horizontal"
        		android:drawSelectorOnTop="true"
        		android:prompt="@string/send_ways_title"
        		android:visibility="gone"
    		/>
		<Button android:id="@+id/btnSend"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:layout_marginTop="14dp"
			android:paddingLeft="40dp"
			android:paddingRight="40dp"
			android:text="发送短信"/>
	</LinearLayout>
	
</LinearLayout>
</ScrollView>