<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background_login">
  <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/username_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/username_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- 登录button -->
    <Button 
    	android:id="@+id/signin_button"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password_edit"
    	android:layout_centerHorizontal="true"
    	
    	android:text="@string/login_label_signin"
    	android:background="@drawable/blue_button"
    	
    />
    <!-- 注册button -->
   
  </RelativeLayout>   
	 <RelativeLayout
      	android:id="@+id/switchButton"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:layout_gravity="center_horizontal"
		
		android:layout_alignParentTop="true"
		>
		<Button
			android:layout_marginLeft="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:background="@drawable/blue_button"
			android:text="@string/login_label_find_back"
			android:id="@+id/find_back"
		/>
		<Button
		    android:layout_marginRight="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:text="@string/login_register"
			android:background="@drawable/blue_button"
			android:id="@+id/register_button"/>
	</RelativeLayout> 
	           
	      <LinearLayout
                android:id="@+id/sendLinout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_marginTop="50dp"                    
                android:orientation="horizontal" >
	    <ImageView android:id="@+id/airenao_logo"
	        android:src="@drawable/cat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginRight="25dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="25dp"
	         />
	 <ImageView android:src="@drawable/logo"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_toLeftOf="@id/airenao_logo"
	     android:layout_alignBottom="@id/airenao_logo"
	     android:paddingBottom="8dp"></ImageView>
	</LinearLayout>
 
</LinearLayout>
