<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1"
	android:background="@drawable/bj">
	<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="45sp"
	android:orientation="horizontal"
	android:background="@drawable/red_button">
		<TextView android:layout_width="wrap_content"
		android:textColor="#FFFFFF" android:layout_height="37sp"
		android:text="@string/detailActivity"
		android:layout_gravity="center_vertical"
		android:gravity="center" 
		android:id="@+id/tv"
		android:textSize="25sp"
		android:layout_centerInParent="true"/>
		<Button
		android:id="@+id/btnDetailEdit"
		android:layout_alignParentRight="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:paddingTop="0dp"
		android:gravity="center"
		android:paddingBottom="2dip"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:background="@drawable/button_red"
		android:text="@string/button_edit"/>
	</RelativeLayout>
	
	<ScrollView android:layout_width="fill_parent"
		android:background="@drawable/bj"
		android:layout_height="fill_parent" android:layout_marginTop="8dip">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				>
				<LinearLayout android:id="@+id/linearLayout1"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:orientation="vertical" android:layout_weight="0.45">
					<RelativeLayout android:id="@+id/startTimeLayout"
						android:layout_width="fill_parent" android:orientation="horizontal"
						android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/startTime"
							android:layout_centerVertical="true"
							android:textColor="#000000"
			            	android:textSize="18sp"
			            	android:layout_marginLeft="10dip"
							android:layout_alignParentLeft="true"
							android:visibility="gone"
							android:text="@string/start_time" />
						<EditText android:layout_width="wrap_content"
							android:layout_height="wrap_content" 
							android:focusable="false"
							android:visibility="gone"
							android:layout_marginLeft="70dip" android:id="@+id/startTimeText"
							android:text="" android:enabled="false" />
					</RelativeLayout>

					<LinearLayout android:id="@+id/positionLayout"
						android:layout_width="fill_parent" android:layout_marginTop="8dp"
						android:orientation="horizontal" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/position"
							android:text="@string/destination"
							android:textColor="#000000"
			            	android:textSize="18sp"
			            	android:visibility="gone"
			            	android:layout_marginLeft="10dip" />
						<EditText android:id="@+id/positionEditText"
							android:layout_width="fill_parent" android:layout_marginLeft="5dp"
							android:layout_marginRight="19dip" android:layout_height="wrap_content"
							android:enabled="false"
							android:visibility="gone"
							android:focusable="false"
							android:layout_weight="1" android:freezesText="true">
							<requestFocus />
						</EditText>
					</LinearLayout>
					<LinearLayout android:id="@+id/peopleNumLayout"
						android:layout_marginTop="8dp" android:layout_width="fill_parent"
						android:orientation="horizontal" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/peopleNum"
							android:text="@string/people_limit" 
							android:textColor="#000000"
			            	android:textSize="18sp"
			            	android:visibility="gone"
			           	 	android:layout_marginLeft="10dip"/>
						<EditText android:id="@+id/peopleNumEditText"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:layout_marginRight="19dip" 
							android:layout_marginLeft="5dp"
							android:enabled="false"
							android:visibility="gone"
							android:focusable="false" android:layout_weight="1"
							android:freezesText="true">
							<requestFocus />
						</EditText>
					</LinearLayout>
					<LinearLayout android:id="@+id/descrLayout"
						android:layout_width="fill_parent" android:layout_marginTop="16dp"
						android:orientation="horizontal" android:layout_height="wrap_content">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:id="@+id/descr"
							android:textColor="#000000"
			            	android:textSize="18sp"
			            	android:layout_marginLeft="10dip"
							android:text="@string/desc_activity" />
						<EditText android:id="@+id/descrEditText"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:layout_weight="1" android:layout_marginRight="24dip"
							android:hint="@string/hint" android:enabled="false"
							android:layout_marginLeft="5dp"
							android:gravity="top"
							android:focusable="false" android:minHeight="160dp"
							android:freezesText="true">
							<requestFocus />
						</EditText>
					</LinearLayout>
				</LinearLayout>

			</LinearLayout>
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/divider_horizontal_dark_opaque"></LinearLayout>
				<ListView
				
				android:id="@+id/listDetailLable"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
					
				</ListView>
		</LinearLayout>

	</ScrollView>
</LinearLayout>
